Integração com o Google Calendar

--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 
+     <df-messenger
+          chat-title="Fenix.IA"
+          agent-id="9773206e-17b6-4449-b20d-3294daaed069"
+          language-code="pt-br"
+     ></df-messenger>
 </body>
 </html>
